
   o CHANGE: In CA display mode, only CAs can now be picked.

   o CHANGE: Nudge centre axes are now relative to the screen rather
     than in world coordinates.

   o CHANGE: NCS skipping changed.  Hopefully faster now [Steven
     Sheriff].  Also works in the case of hetero dimers with NCS [Phil
     Evans].

   o CHANGE: default bond width changed to 5.

   o CHANGE: Traffic lights verticallized.

   o CHANGE: Symmetry colour info added to state file [Doug Kuntz].
 
   o CHANGE: the argument order for "mutate" have been canonicalised.
  
   o CHANGE: set-symmetry-colour-merge now takes only a fraction
     argument.

   o CHANGE: Residues can no longer be translated in "Rotamer Change"
     mode.

   o CHANGE: Mutate no longer changes the atom order in the pdb file.

   o CHANGE: Next Residue/Previous residue reworked so that it now
     jumps over gaps and goes to the right residue when encountering
     insertion codes.

   o CHANGE: Don't allow translation drag of intermediate atoms during
     rotamer selection.

   o CHANGE: Reference structures now have strand markup in the
     header, so they can now be used as the reference structures for
     "Build Strand".

   o CHANGE: Colour by Chain style also now displays zero occupancy
     markers [PRE].

   o BUG-FIX: chiral volumes are now correctly handled for multiple
     monomer bespoke ligand dictionaries.

   o BUG-FIX: Hydrogens names are better handled after an undo
     operation - no longer do they fly off when refining [Joel Bard]

   o BUG-FIX: Non-flexible ligands can be added to ligand search when
     the "flexible?" option is selected.  Previously the ligand search
     was aborted.

   o BUG-FIX: side-by-side stereo mode improved [Randy Read].
 
   o BUG-FIX: Now coot does not crash on when displaying NPD atoms
     in anisotropic representation [Mitch Miller].

   o BUG-FIX: Coot no longer crashes when deleting a residue with an
     Alt Conf [JED].
